--- a/.github/workflows/GithubAction.yaml
+++ b/.github/workflows/GithubAction.yaml
@@ -1,13 +1,43 @@
-#For the provider URL: Use https://token.actions.githubusercontent.com
-#For the "Audience": Use sts.amazonaws.com 
+# #For the provider URL: Use https://token.actions.githubusercontent.com
+# #For the "Audience": Use sts.amazonaws.com 
+# name: AWS OIDC Connect Demo
+# on:
+#   push
+# env:
+#   AWS_REGION : "ap-south-1"   
+# permissions:
+#       id-token: write   # This is required for requesting the JWT
+#       contents: read    # This is required for actions/checkout
+# jobs:
+#   DemoOIDC:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Git clone the repository
+#         uses: actions/checkout@v3
+
+#       - name: configure aws credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           role-to-assume: arn:aws:iam::533267177980:role/OIDC_Role
+#           # role-session-name: samplerolesession
+#           aws-region: ${{ env.AWS_REGION }}
+
+#       - name: Print AWS SSM Parameter
+#         run: aws ssm get-parameter --name=hello_aws-gh-oidc --query Parameter.Value
+
+#       - name: Print assumed role
+#         run: aws sts get-caller-identity
+
 name: AWS OIDC Connect Demo
 on:
-  push
+  push:
+    branches:
+      - main
 env:
-  AWS_REGION : "ap-south-1"   
+  AWS_REGION: "ap-south-1"
 permissions:
-      id-token: write   # This is required for requesting the JWT
-      contents: read    # This is required for actions/checkout
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
 jobs:
   DemoOIDC:
     runs-on: ubuntu-latest
@@ -15,15 +45,14 @@ jobs:
       - name: Git clone the repository
         uses: actions/checkout@v3
 
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::533267177980:role/OIDC_Role
-          # role-session-name: samplerolesession
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Print AWS SSM Parameter
-        run: aws ssm get-parameter --name=hello_aws-gh-oidc --query Parameter.Value
+        run: aws ssm get-parameter --name hello_aws-gh-oidc --query Parameter.Value
 
       - name: Print assumed role
         run: aws sts get-caller-identity
