--- a/.github/workflows/GithubAction.yaml
+++ b/.github/workflows/GithubAction.yaml
@@ -1,34 +1,4 @@
-# #For the provider URL: Use https://token.actions.githubusercontent.com
-# #For the "Audience": Use sts.amazonaws.com 
-# name: AWS OIDC Connect Demo
-# on:
-#   push
-# env:
-#   AWS_REGION : "ap-south-1"   
-# permissions:
-#       id-token: write   # This is required for requesting the JWT
-#       contents: read    # This is required for actions/checkout
-# jobs:
-#   DemoOIDC:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: Git clone the repository
-#         uses: actions/checkout@v3
-
-#       - name: configure aws credentials
-#         uses: aws-actions/configure-aws-credentials@v1
-#         with:
-#           role-to-assume: arn:aws:iam::533267177980:role/OIDC_Role
-#           # role-session-name: samplerolesession
-#           aws-region: ${{ env.AWS_REGION }}
-
-#       - name: Print AWS SSM Parameter
-#         run: aws ssm get-parameter --name=hello_aws-gh-oidc --query Parameter.Value
-
-#       - name: Print assumed role
-#         run: aws sts get-caller-identity
-
-name: CI/CD
+name: Launch EC2 Instance
 
 on:
   push:
@@ -36,8 +6,9 @@ on:
       - main
 
 jobs:
-  deploy:
+  launch-ec2:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -45,8 +16,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::533267177980:role/OIDC_Role
-          aws-region: ap-south-1
+          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Launch EC2 instance
         run: |
@@ -55,3 +26,8 @@ jobs:
             --count 1 \
             --instance-type t2.micro \
             --key-name MumbaiKey \
+            # --security-group-ids YOUR_SECURITY_GROUP_ID \
+            # --subnet-id YOUR_SUBNET_ID
+            
+      - name: Print environment variables
+        run: env
