new role ARN added

--- a/.github/workflows/GithubAction.yaml
+++ b/.github/workflows/GithubAction.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          role-to-assume: arn:aws:iam::533267177980:role/OIDC_Role
+          role-to-assume: arn:aws:iam::533267177980:role/NewOIDCRole
           aws-region: ap-south-1
 
       - name: Launch EC2 instance
