--- a/.github/workflows/GithubAction.yaml
+++ b/.github/workflows/GithubAction.yaml
@@ -1,34 +1,42 @@
-name: Launch EC2 Instance
+name: Terraform
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  launch-ec2:
+  terraform:
+    name: Terraform
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          role-to-assume: arn:aws:iam::533267177980:role/NewOIDCRole
-          audience: sts.amazonaws.com
-          aws-region: ap-south-1
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v2
+      with:
+        role-to-assume: arn:aws:iam::533267177980:role/NewOIDCRole
+        aws-region: ap-south-1
+        audience: sts.amazonaws.com
+        role-session-name: GitHubActions
+        role-duration-seconds: 3600
 
-      - name: Launch EC2 instance
-        run: |
-          aws ec2 run-instances \
-            --image-id ami-0ad21ae1d0696ad58 \ # Example AMI ID, replace with your preferred AMI
-            --count 1 \
-            --instance-type t2.micro \
-            --key-name MumbaiKey \
-            # --security-group-ids YOUR_SECURITY_GROUP_ID \
-            # --subnet-id YOUR_SUBNET_ID
+    - name: Set up Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.0.0
 
-      - name: Print environment variables
-        run: env
+    - name: Terraform Init
+      run: terraform init
+
+    - name: Terraform Plan
+      run: terraform plan
+
+    - name: Terraform Apply
+      if: github.ref == 'refs/heads/main'
+      run: terraform apply -auto-approve
