--- a/.github/workflows/Deploy1.yml
+++ b/.github/workflows/Deploy1.yml
@@ -29,11 +29,11 @@ jobs:
     # - name: Terraform Format
     #   run: terraform fmt -check
 
-    # - name: Terraform Validate
-    #   run: terraform validate
+    - name: Terraform Validate
+      run: terraform validate
 
-    # - name: Terraform Plan
-    #   run: terraform plan -out=tfplan
+    - name: Terraform Plan
+      run: terraform plan -out=tfplan
 
     - name: Terraform Apply
       if: github.event_name == 'push'
