--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.59.0/darwin_arm64/terraform-provider-aws_v5.59.0_x5
 .terraform/providers/registry.terraform.io/hashicorp/aws/5.59.0/darwin_arm64/LICENSE.txt
 .terraform
+terraform.tfstate.backup
